<resources>
    <string name="app_name">Template 2022</string>
    <string name="open_example_fragment">Fragment</string>
    <string name="open_example_activity">Activity</string>
    <string name="network_test">Network Test</string>
    <string name="example">Example</string>
    <string name="example_activity">Example Activity</string>

    <!-- Movies -->
    <string name="movies">Movies</string>
    <string name="notify_msg_loading_movies">Loading fresh movies list</string>
    <string name="toast_schedule_movies_fetch">Movies will be fetched every 15 minutes</string>

    <!--Movies Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_schedule">Schedule</string>
    <string name="action_favorites">Favorites</string>

    <!-- Images Descriptions -->
    <string name="desc_movie_image">Movie image</string>
    <string name="desc_add_to_favorites">Add to favorites</string>

    <!-- Settings Fragment-->
    <string name="minimum_votes">Minimum votes:</string>
    <string name="minimum_rating">Minimum rating:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    <!-- API -->
    <string name="api">API</string>
    <string name="add_api">Add API</string>
    <string name="schedule">Schedule</string>
    <string name="import_url">Import</string>
    <string name="base_url">Base URL (ex: http://google.com)</string>
    <string name="import_url_hint">URL (ex: http://google.com)</string>
    <string name="desc_base_url_icon">Base Url Icon</string>
    <string name="save">Save</string>
    <string name="import_it">Import</string>
    <string name="desc_add_query_param">Add Query Param</string>
    <string name="add_parameter">Add Parameter</string>
    <string name="import_url_title">Import URL</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="not_valid_url">Not valid URL</string>
    <string name="not_valid_key">Key can\'t be empty</string>
    <string name="not_valid_empty_url">URL can\'t be empty</string>
    <string name="checkbox_show_notif_before_request">Show reminding notification with action</string>
    <string name="checkbox_show_notif_on_request">Show notification on request</string>
    <string name="checkbox_show_notif_on_response">Show notification on response</string>
    <string name="btn_set_date">Set Launch date</string>
    <string name="not_set_date">Not set launch date</string>
    <string name="btn_set_time">Set Launch time</string>
    <string name="not_set_time">Not set launch time</string>
    <string name="btn_set_repeat">Set Repeat interval</string>
    <string name="not_set_repeat">Not set repeat interval</string>


    <!-- Unsorted -->

</resources>