<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnOpenFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_example_fragment"
        app:layout_constraintEnd_toStartOf="@id/btnOpenActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnOpenActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_example_activity"
        app:layout_constraintEnd_toStartOf="@id/btnMovies"
        app:layout_constraintStart_toEndOf="@id/btnOpenFragment"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnOpenActivity"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnApi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/api"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnOpenFragment" />

</androidx.constraintlayout.widget.ConstraintLayout>