<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_neutral90"
        android:gravity="center"
        android:padding="12dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="http://www.googl.com/kuku?a=1" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbShowNotifBefore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_show_notif_before_request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUrl" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbShowNotifRequest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_show_notif_on_request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbShowNotifBefore" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbShowNotifResponse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_show_notif_on_response"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbShowNotifRequest" />

    <!-- TODO Show dialog with date picker and action Buttons: Today, cancel, ok
         <DatePicker
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>-->

    <!-- TODO Show dialog with time picker and action Buttons: cancel, ok
   <TimePicker
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"-->

   <!--TODO allow to set repeat interval-->



    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabAddApi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/schedule"
        app:icon="@drawable/ic_schedule"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>